--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,6 +1,6 @@
 <div>
-  {{post.userId}}
-  {{post.id}}
-  {{post.title}}
-  {{post.body}}
+  {{posts.userId}}
+  {{posts.id}}
+  {{posts.title}}
+  {{posts.body}}
 </div>
