--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,6 +1,6 @@
 <div>
-  {{user.id}}
-  {{user.name}}
-  {{user.username}}
-  {{user.email}}
+  {{users.id}}
+  {{users.name}}
+  {{users.username}}
+  {{users.email}}
 </div>
