--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,3 +1,3 @@
 <app-user *ngFor="let u of users" [users]="u"></app-user>
-<app-posts *ngFor="let p of posts" [posts]="p"></app-posts>
-<app-comments *ngFor="let c of comments" [comments]="c"></app-comments>>
+<!--<app-posts *ngFor="let p of posts" [posts]="p"></app-posts>-->
+<!--<app-comments *ngFor="let c of comments" [comments]="c"></app-comments>>-->
